tests/baselines/reference/nodeModulesExportsSourceTs(module=node18).errors.txt
index.ts(2,23): error TS2307: Cannot find module 'inner/other' or its corresponding type declarations.
index.ts(3,14): error TS2742: The inferred type of 'a' cannot be named without a reference to './node_modules/inner/other.js'. This is likely not portable. A type annotation is necessary.


==== index.ts (2 errors) ====
    // esm format file
    import { Thing } from "inner/other";
                          ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/other' or its corresponding type declarations.
    export const a = (await import("inner")).x();
                 ~
!!! error TS2742: The inferred type of 'a' cannot be named without a reference to './node_modules/inner/other.js'. This is likely not portable. A type annotation is necessary.
    import {a as a2} from "package";
==== node_modules/inner/index.ts (0 errors) ====
    // esm format file
    export { x } from "./other.js";
==== node_modules/inner/other.ts (0 errors) ====
    // esm format file
    export interface Thing {}
    export const x: () => Thing = null as any;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.ts"
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "type": "module",
        "exports": "./index.ts"
    }